prevent double borders

--- a/base/_elements.scss
+++ b/base/_elements.scss
@@ -26,4 +26,5 @@ ol {
 table {
 	margin: 0 0 $spacer;
 	width: 100%;
+	border-collapse: collapse;
 }
